Page title not showing over hero blank..  Iterators issue # 37.

--- a/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
+++ b/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
@@ -822,3 +822,11 @@ What: Improves footer responsive actions. Iterators issue #32.
     margin-left: 18px;
   }
 }
+/*
+David:
+Where: node-listing-page.twig.twig
+What: Brings title over the top of the hero blank layer. Iterators issue #37.
+*/
+.desktop-100.node-listing-page {
+  position:relative;
+}
